finished the grid data parsing, created a modal and a service for it. next to do is a dropdown search menu and transfering current grid data logic to a dedicated service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <data-grid
     [rows]="data"
->
-</data-grid>
+></data-grid>
+<app-registration-modal *ngIf="modalService.modalVisible"></app-registration-modal>
+
+<!--*ngIf="modalService.modalVisible"-->
