--- a/src/app/components/data-grid/row/row.component.html
+++ b/src/app/components/data-grid/row/row.component.html
@@ -12,7 +12,9 @@
         <p>{{row.originDestination}}</p>
     </div>
     <div class="row-cell">
-        <p *ngIf="row.registration === '' || row.registration === null">...........</p>
-        <p *ngIf="row.registration !== '' && row.registration !== null">{{row.registration}}</p>
+        <p *ngIf="row.registration === '' || row.registration === null"
+           (click)="showModal(row.registration, row.scheduledDate)">...........</p>
+        <p *ngIf="row.registration !== '' && row.registration !== null"
+           (click)="showModal(row.registration, row.scheduledDate)">{{row.registration}}</p>
     </div>
 </div>
