--- a/src/app/components/registration-modal/registration-modal.component.css
+++ b/src/app/components/registration-modal/registration-modal.component.css
@@ -59,12 +59,20 @@ input {
   height: 33px;
   width: 301px;
   margin: 0 25px;
-  padding-left: 10px;
   border: 2px solid #d8d8d8;
   border-radius: 2px;
   font-size: 14px;
   font-weight: 900;
   text-transform: uppercase;
+}
+.dropdown {
+  position: absolute;
+  /*display: none;*/
+  overflow: scroll;
+  height: 289px;
+  width: 301px;
+  margin-left: 25px;
+  border: 2px solid #18abf4;
 }
 .buttons {
   display: inline-block;
