--- a/src/app/components/data-grid/row/row.component.html
+++ b/src/app/components/data-grid/row/row.component.html
@@ -1,20 +1,22 @@
 <div class="row-container">
-    <div class="row-cell">
-        <p>{{row.flightNumber}}</p>
-    </div>
-    <div class="row-cell">
-        <p>{{row.scheduledDate | date:"dd/MM/yy" }}</p>
-    </div>
-    <div class="row-cell">
-        <p>{{row.scheduledDate | date:"hh:mm" }}</p>
-    </div>
-    <div class="row-cell">
-        <p>{{row.originDestination}}</p>
-    </div>
-    <div class="row-cell">
-        <p *ngIf="row.registration === '' || row.registration === null"
-           (click)="showModal(row.registration, row.scheduledDate)">...........</p>
-        <p *ngIf="row.registration !== '' && row.registration !== null"
-           (click)="showModal(row.registration, row.scheduledDate)">{{row.registration}}</p>
-    </div>
+  <div class="row-cell">
+      <p>{{row.flightNumber}}</p>
+  </div>
+  <div class="row-cell">
+      <p>{{row.scheduledDate | date:"dd/MM/yy" }}</p>
+  </div>
+  <div class="row-cell">
+      <p>{{row.scheduledDate | date:"hh:mm" }}</p>
+  </div>
+  <div class="row-cell">
+      <p>{{row.originDestination}}</p>
+  </div>
+  <div class="row-cell">
+    <p *ngIf="modalService.newValue.length>1"
+       (click)="showModal(row.registration, row.scheduledDate)">{{modalService.newValue}}</p>
+    <p *ngIf="modalService.newValue.length==0 && row.registration === '' || row.registration === null"
+       (click)="showModal(row.registration, row.scheduledDate)">...........</p>
+    <p *ngIf="row.registration !== '' && row.registration !== null && modalService.newValue.length==0"
+       (click)="showModal(row.registration, row.scheduledDate)">{{row.registration}}</p>
+  </div>
 </div>
