--- a/src/app/components/registration-modal/registration-modal.component.css
+++ b/src/app/components/registration-modal/registration-modal.component.css
@@ -1,23 +1,18 @@
 .modal-background {
   position: fixed;
-  z-index: 500;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.6);
 }
 .modal-window {
-  position: absolute;
-  z-index: 1000;
+  position: fixed;
   left: calc((100% - 359px) / 2);
   top: calc((100% - 230px) / 2);
   width: 359px;
   height: 230px;
   background-color: #f0f0f0;
-  /*//#efefef*/
 }
 .header {
   height: 61px;
@@ -41,12 +36,10 @@
   float: right;
   margin-right: 27px;
   bottom: 35px;
-  cursor: pointer;
 }
 .centre-frame {
   height: 108px;
   width: 351px;
-  background-color: #ffffff;
   margin: 0 4px;
 }
 .label {
@@ -57,7 +50,8 @@
 }
 input {
   height: 33px;
-  width: 301px;
+  width: 289px;
+  padding-left: 12px;
   margin: 0 25px;
   border: 2px solid #d8d8d8;
   border-radius: 2px;
@@ -65,14 +59,31 @@ input {
   font-weight: 900;
   text-transform: uppercase;
 }
+input:focus {
+  outline-width: 0;
+}
 .dropdown {
   position: absolute;
-  /*display: none;*/
-  overflow: scroll;
+  overflow-y: scroll;
   height: 289px;
   width: 301px;
   margin-left: 25px;
   border: 2px solid #18abf4;
+  top: 136px;
+}
+.li-header {
+  font-size: 12px;
+  padding: 7px 0 13px 6px;
+  background-color: #f0f0f0;
+  font-weight: 900;
+}
+.li-item {
+  font-size: 13px;
+  padding: 12px 0 12px 6px;
+  border-bottom: solid 1px #d8d8d8;
+}
+.li-item:hover {
+  background-color: rgba(240, 240, 240, 0.5);
 }
 .buttons {
   display: inline-block;
@@ -83,7 +94,6 @@ button {
   height: 36px;
   font: 14px Source Sans Pro, sans-serif;
   font-weight: 900;
-  background-color: white;
   border: 2px solid #18abf4;
   border-radius: 2px;
 }
