--- a/src/app/components/registration-modal/registration-modal.component.html
+++ b/src/app/components/registration-modal/registration-modal.component.html
@@ -6,30 +6,10 @@
     <img id="exit-btn" class="link" src="../../../assets/images/cross.png" (click)="cancelModal()">
   </div>
   <div class="white centre-frame">
-    <div class="label">Registration</div>
-
-    <input [(ngModel)]="inputValue"
-           (ngModelChange)="searchSimilar()"
-           (focus)="inputFocused = true"
-           (blur)="inputFocused = false"
-           [ngClass]="{'blue-border': inputFocused}"
-           autofocus
-    />
-
-    <div class="white dropdown" *ngIf="inputFocused && inputValue.length>1 && !selectedFlight">
-      <ul>
-        <li class="li-header">REGISTRATIONS
-          <span class="not-bold">({{filteredRegistrations.length}})</span>
-        </li>
-        <li class="li-item link" *ngFor="let row of filteredRegistrations" (mousedown)="inputValue=row">
-          <div [innerHTML]="boldify(row)"></div>
-        </li>
-      </ul>
-    </div>
-
+    <registration-search #dropdownComponent [values]="allRegistrations"></registration-search>
   </div>
   <div class="buttons-wrapper">
-  <button class="white cancel-btn link" (click)="cancelModal()">CANCEL</button>
-  <button class="save-btn link" (click)="save()">SAVE</button>
+    <button class="white cancel-btn link" (click)="cancelModal()">CANCEL</button>
+    <button class="save-btn link" (click)="save()">SAVE</button>
   </div>
 </div>
