changed the img path to see if it fixes the bug visible on github pages

--- a/src/app/components/registration-modal/registration-modal.component.html
+++ b/src/app/components/registration-modal/registration-modal.component.html
@@ -3,7 +3,7 @@
   <div class="header">
     <div class="first-row">{{selectedFlight}} Registration</div>
     <div class="second-row">{{flightDate | date: "dd/MM/yy - hh:mm"}}</div>
-    <img id="exit-btn" class="link" src="../../../assets/images/cross.png" (click)="cancelModal()">
+    <img id="exit-btn" class="link" src="assets/images/cross.png" (click)="cancelModal()">
   </div>
   <div class="white centre-frame">
     <registration-search #dropdownComponent [values]="allRegistrations"></registration-search>
